2018-06-28 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/tests/gcc-torture-execute-20040409-2.c:
	  Disabled more tests for arm64.

2018-06-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/mcs51/peep.c:
	  Fix bug #2108.
	* device/lib/z80/crt0.s,
	  device/lib/z180/crt0.s:
	  Implement ei for RFE #519.
	* src/SDCCbtree.cc,
	  src/SDCCnaddr.hpp,
	  configure.ac,
	  configure:
	  Remove use of STX, RFE #542.

2018-06-26 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/tests/gcc-torture-execute-20040409-1.c:
	* support/regression/tests/gcc-torture-execute-20040409-2.c:
	* support/regression/tests/gcc-torture-execute-20040409-3.c:
	  Disabled for arm64.

2018-06-25 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2363.c:
	  Disable test for mcs51 small model.

2018-06-22 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCcse.c: remove leftover debugging (fix bug #2763)

2018-06-21 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/asxxsrc/asdbg.c:
	  Fix an assembler issue, alternative fix to patch #286.
	* support/regression/tests/bug-2750.c:
	  Regression test for bug #2750.
	* support/regression/tests/bug-2363.c:
	  Regression test for bug #2363.

2018-06-17 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCC.y,
	  src/SDCCBBlock.c,
	  src/SDCCast.c,
	  src/SDCCast.h,
	  src/SDCCdwarf2.c,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCglobl.h,
	  src/SDCCglue.c,
	  src/SDCCicode.c,
	  src/SDCCicode.h,
	  src/SDCCmem.c,
	  src/SDCCsymt.c,
	  src/SDCCsymt.h,
	  src/SDCCval.c,
	  src/cdbFile.c,
	  support/regression/tests/p99-conformance.c,
	  support/regression/tests/declafterstmt.c,
	  support/valdiag/tests/declafterstmt.c:
	  Support for C99 intermingling of declaration and statements, patch by Benedikt Freisen.
	* doc/sdccman.lyx:
	  Update documentation on standard support.

2018-06-15 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCClospre.hpp,